[package]
name = "tracing-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# attempt 1: use versions of the api server
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

tokio = { version = "1.35.1", default-features = false, features = ["macros", "parking_lot", "rt-multi-thread", "test-util"] }

sqlx = { version = "0.7.1", default-features = false, features = ["macros", "chrono", "runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
diesel = "2.1.0" # no backend features need to be enabled
diesel-async = { version = "0.3.1", features = ["postgres"] }
diesel-tracing = "0.2.3"
anyhow = "1.0.81"
